THRIFT-3498 C++ library assumes optional function pthread_attr_setschedpolicy is available Client: C++ Patch: Simon South

PosixThreadFactory.cpp: Test for availability of optional
pthread_attr_setschedpolicy function before including in source code

This closes #754